--- a/blog/templates/blog/post_edit.html
+++ b/blog/templates/blog/post_edit.html
@@ -18,17 +18,11 @@
             <div class="row">
                 <div class="col-md-8">
                     {% block content %}
-                        <div class="post">
-                            {% if post.published_date %}
-                                <div class="date">
-                                    {{ post.published_date }}
-                                </div>
-                            {% if user.is_authenticated %}
-                            <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
-                            {% endif %}
-                            <h2>{{ post.title }}</h2>
-                            <p>{{ post.text|linebreaksbr }}</p>
-                        </div>
+                        <h2>New post</h2>
+                        <form method="POST" class="post-form">{% csrf_token %}
+                            {{ form.as_p }}
+                            <button type="submit" class="save btn btn-default">Save</button>
+                        </form>
                     {% endblock %}
                 </div>
             </div>
